Fixed layout problem with newspaper article

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -16,6 +16,11 @@ section[epub|type~="halftitlepage"] span[epub|type~="subtitle"]{
 	font-variant: small-caps;
 }
 
+header{
+	text-align: center;
+	font-variant: small-caps;	
+}
+
 footer{
 	text-align: right;
 }
